Changes since version 3.1.0
---------------------------
- Restored Communicator::setDefaultContext

- Fixed a bug in Ice::initialize() that raised a NullHandleException
  when the function was called without arguments or when the
  properties member of InitializationData was null.

Changes since version 3.0.1
---------------------------

- Fixed a bug in slice2cpp that could cause incorrect code to
  be generated if a class contained a member to another class,
  but that class was only forward declared.

- Unsupported port to Solaris 10 on Intel/AMD contributed by
  Markus Bernhardt.

- Removed removeObjectFactory() from the communicator interface.

- Added a new object and server allocation mechanism to IceGrid. See
  the Ice manual for more information.

- The IceGrid XML descriptor <adapter> can only be used to specify
  indirect adapters. It's no longer possible to specify an adapter
  with an empty id. You can use properties to configure direct
  adapters.

- Fixed a bug where IceGrid would fail to register well-known objects
  with an identity containing reserved characters for proxies.

- Added "always" and "session" activation modes to IceGrid. See the
  Ice manual for more information.

- Changed the entry point of the IceSSL plugin to be 
  IceSSL:createIceSSL.

- Changed the entry point of the IceStorm service to be 
  IceStormService,31:createIceStorm.

- ObjectAdapter::deactivate() now notifies the locator registry when
  the adapter is deactivated.

- Fixed ObjectAdapter::activate() to activate the object adapter
  only if it is able to register its endpoints and process proxy with
  the locator. Calling activate() again retries a failed registration.

- Glacier2.AllowCategories is now deprecated and superseded by
  Glacier2.Filter.Category.Accept.

- A new address filtering mechanism has been added to the Glacier2
  router. See the description of the Glacier2.Filter.Address.Accept
  and Glacier2.Filter.Address.Reject properties in the Ice manual