@@ -827,33 +827,21 @@ IceBoxDescriptorBuilder::addAdapter(const XmlAttributesHelper& attrs)
     {
 	throw "<adapter> element can't be a child of an <icebox> element";
     }
-    
-    AdapterDescriptor& desc = _descriptor->adapters.back();
-    assert(desc.name == "IceBox.ServiceManager");
-    desc.id = attrs("id", desc.id);
-    desc.replicaGroupId = attrs("replica-group", desc.replicaGroupId);
-    desc.registerProcess = attrs.asBool("register-process", desc.registerProcess);
-    if(desc.id == "" && attrs.contains("wait-for-activation"))
+
+    PropertyDescriptorSeq::iterator p = _hiddenProperties.begin();
+    while(p != _hiddenProperties.end())
     {
-	throw "the attribute `wait-for-activation' can only be set if the adapter has an non empty id";
-    }
-    else
-    {
-	desc.waitForActivation = attrs.asBool("wait-for-activation", desc.waitForActivation);
+	if(p->name == "IceBox.ServiceManager.Endpoints" || p->name == "IceBox.ServiceManager.RegisterProcess")
+	{
+	    p = _hiddenProperties.erase(p);
+	}
+	else
+	{
+	    ++p;
+	}
     }
 
-    if(attrs.contains("endpoints"))
-    {
- 	PropertyDescriptorSeq::iterator p;
- 	for(p = _descriptor->propertySet.properties.begin(); p != _descriptor->propertySet.properties.end(); ++p)
- 	{
- 	    if(p->name == "IceBox.ServiceManager.Endpoints")
- 	    {
- 		p->value = attrs("endpoints");
- 		break;
- 	    }
- 	}
-    }
+    ServerDescriptorBuilder::addAdapter(attrs);
 }
 
 void
